[package]
name = "redmine-rs"
version = "0.1.0"
authors = ["chansuke <chansuke@georepublic.de>"]
description = "This is a command line interface for Redmine"
edition = "2018"
license = "MIT OR Apache-2.0"
include = [
    "*.rs",
    "**/*.rs",
    "**/**/*.rs",
    "Cargo.toml",
    "LICENSE-*",
    "README.md",
]

[dependencies]
clap = "3.0.0-beta.2"
futures = "0.3.8"
structopt = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
serde_json = "1.0"
url = "2.0"
chrono = { version = "0.4", features = ["serde"] }
ansi_term = "0.12.1"
thiserror = "1.0.23"
anyhow = "1.0"
